--- a/public/indexold.html
+++ b/public/indexold.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/favicon.png" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>BPC | Altyapı&Otomasyon</title>
   <meta name="description" content="The website build with React.js">
 
